src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-2.snap
---
source: src/parser.rs
assertion_line: 3962
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    Banana as hello | hello -> True\n\")"
---
Input:

module Test

test = when test is
    Banana as hello | hello -> True


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:68
                    condition:
                        Identifier test 25:29 25:29
                    PatternMatchingBranch 37:68
                        pattern:
                            Or 37:60
                                Named: hello 47:52 37:52
                                    Banana 37:43 37:43
                                Identifier hello 55:60 55:60
                        body:
                            Identifier True 64:68 64:68



