src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-3.snap
---
source: src/parser.rs
assertion_line: 3970
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    Banana asdf as hello | hello -> True\n\")"
---
Input:

module Test

test = when test is
    Banana asdf as hello | hello -> True


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:73
                    condition:
                        Identifier test 25:29 25:29
                    PatternMatchingBranch 37:73
                        pattern:
                            Or 37:65
                                Named: hello 52:57 37:57
                                    Banana 37:43 37:48
                                        Identifier asdf 44:48 44:48
                                Identifier hello 60:65 60:65
                        body:
                            Identifier True 69:73 69:73



