src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-4.snap
---
source: src/parser.rs
assertion_line: 3976
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    Banana (asdf as hello) | hello -> True\n\")"
---
Input:

module Test

test = when test is
    Banana (asdf as hello) | hello -> True


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [
            Import {
                span: Index(
                    1,
                ),
                module_name: ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 7,
                            },
                            span: Index(
                                1,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 7,
                    },
                },
                alias: None,
                exposing: [
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 8,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 9,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 10,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 6,
                                    },
                                    span: Index(
                                        1,
                                    ),
                                },
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 11,
                                    },
                                    span: Index(
                                        1,
                                    ),
                                },
                            ],
                        },
                    },
                ],
            },
        ],
        definitions: [
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            2,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 2,
                                },
                                span: Index(
                                    2,
                                ),
                            },
                        ),
                    },
                    Index(
                        2,
                    ),
                ),
            ),
        ],
        type_definitions: [],
        expressions: {
            Index(
                0,
            ): Expression {
                span: Index(
                    15,
                ),
                expr: Identifier {
                    module: None,
                    identifier: CapitalizedIdentifier(
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 6,
                            },
                            span: Index(
                                14,
                            ),
                        },
                    ),
                },
            },
            Index(
                1,
            ): Expression {
                span: Index(
                    4,
                ),
                expr: Identifier {
                    module: None,
                    identifier: Identifier(
                        Identifier {
                            name: SymbolU32 {
                                value: 2,
                            },
                            span: Index(
                                4,
                            ),
                        },
                    ),
                },
            },
            Index(
                2,
            ): Expression {
                span: Index(
                    17,
                ),
                expr: PatternMatching {
                    expression: Index(
                        1,
                    ),
                    branches: [
                        PatternMatchingBranch {
                            span: Index(
                                16,
                            ),
                            pattern: Pattern {
                                span: Index(
                                    13,
                                ),
                                typ: Or(
                                    [
                                        Pattern {
                                            span: Index(
                                                10,
                                            ),
                                            typ: Type {
                                                module: None,
                                                constructor: CapitalizedIdentifier {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Index(
                                                        5,
                                                    ),
                                                },
                                                params: [
                                                    Pattern {
                                                        span: Index(
                                                            9,
                                                        ),
                                                        typ: Named {
                                                            pattern: Pattern {
                                                                span: Index(
                                                                    7,
                                                                ),
                                                                typ: Identifier(
                                                                    Identifier {
                                                                        name: SymbolU32 {
                                                                            value: 4,
                                                                        },
                                                                        span: Index(
                                                                            6,
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                            name: Identifier {
                                                                name: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Index(
                                                                    8,
                                                                ),
                                                            },
                                                        },
                                                    },
                                                ],
                                            },
                                        },
                                        Pattern {
                                            span: Index(
                                                12,
                                            ),
                                            typ: Identifier(
                                                Identifier {
                                                    name: SymbolU32 {
                                                        value: 5,
                                                    },
                                                    span: Index(
                                                        11,
                                                    ),
                                                },
                                            ),
                                        },
                                    ],
                                ),
                            },
                            condition: None,
                            body: Index(
                                0,
                            ),
                        },
                    ],
                },
            },
        },
        expression_types: {
            Index(
                0,
            ): None,
            Index(
                1,
            ): None,
            Index(
                2,
            ): None,
        },
    },
    [],
)

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            5,
        ),
        end: Index(
            5,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            11,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            11,
        ),
    },
    Index(
        10,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            11,
        ),
    },
    Index(
        11,
    ): Span {
        start: Index(
            14,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        12,
    ): Span {
        start: Index(
            14,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        13,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        14,
    ): Span {
        start: Index(
            16,
        ),
        end: Index(
            16,
        ),
    },
    Index(
        15,
    ): Span {
        start: Index(
            16,
        ),
        end: Index(
            16,
        ),
    },
    Index(
        16,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            16,
        ),
    },
    Index(
        17,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            16,
        ),
    },
}
