src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-5.snap
---
source: src/parser.rs
assertion_line: 4069
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    Banana | hi as hello  -> True\n\")"
---
Input:

module Test

test = when test is
    Banana | hi as hello  -> True


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:66
                    conditions:
                        Identifier test 25:29 25:29
                    PatternMatchingBranch 37:66
                        patterns:
                            Or 37:57
                                Banana 37:43 37:43
                                Named: hello 52:57 46:57
                                    Identifier hi 46:48 46:48
                        body:
                            Identifier True 62:66 62:66



