src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-6.snap
---
source: src/parser.rs
assertion_line: 4077
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    Banana asdf | hi as hello  -> True\n\")"
---
Input:

module Test

test = when test is
    Banana asdf | hi as hello  -> True


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:71
                    conditions:
                        Identifier test 25:29 25:29
                    PatternMatchingBranch 37:71
                        patterns:
                            Or 37:62
                                Banana 37:43 37:48
                                    Identifier asdf 44:48 44:48
                                Named: hello 57:62 51:62
                                    Identifier hi 51:53 51:53
                        body:
                            Identifier True 67:71 67:71



