src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-9.snap
---
source: src/parser.rs
assertion_line: 4102
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    hi | smth -> True\n\")"
---
Input:

module Test

test = when test is
    hi | smth -> True


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:54
                    conditions:
                        Identifier test 25:29 25:29
                    PatternMatchingBranch 37:54
                        patterns:
                            Or 37:46
                                Identifier hi 37:39 37:39
                                Identifier smth 42:46 42:46
                        body:
                            Identifier True 50:54 50:54



