src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern.snap
---
source: src/parser.rs
assertion_line: 3954
expression: "parse(\"\\\nmodule Test\n\nDimensions widht height as dimensions | dimensions = Dimensions 500 400\n\")"
---
Input:

module Test

Dimensions widht height as dimensions | dimensions = Dimensions 500 400


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Or 13:63
                    Named: dimensions 40:50 13:50
                        Dimensions 13:23 13:36
                            Identifier widht 24:29 24:29
                            Identifier height 30:36 30:36
                    Identifier dimensions 53:63 53:63
            expr:
                FnCall 66:84
                    fn:
                        Identifier Dimensions 66:76 66:76
                    args:
                        Float 500 77:80
                        Float 400 81:84



