src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_string_patern.snap
---
source: src/parser.rs
assertion_line: 3884
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    \\\"test\\\" -> True\n\")"
---
Input:

module Test

test = when test is
    "test" -> True


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:51
                    condition:
                        Identifier test 25:29 25:29
                    PatternMatchingBranch 37:51
                        pattern:
                            String "test" 37:43
                        body:
                            Identifier True 47:51 47:51



